##################################################
## CMake
##################################################
cmake_minimum_required(VERSION 2.6)

##################################################
## Project
##################################################
project(Demos)

##################################################
## Includes
##################################################
include(cmake/tools.cmake)

##################################################
## Projects
##################################################
add_subdirectory(Source)
